--- a/SDL_SimpleControls.cbp
+++ b/SDL_SimpleControls.cbp
@@ -54,16 +54,21 @@
 		<Unit filename="SDL_BoxLayout.h" />
 		<Unit filename="SDL_Button.cpp" />
 		<Unit filename="SDL_Button.h" />
+		<Unit filename="SDL_DC.cpp" />
+		<Unit filename="SDL_DC.h" />
 		<Unit filename="SDL_Glyph.cpp" />
 		<Unit filename="SDL_Glyph.h" />
 		<Unit filename="SDL_Image.cpp" />
 		<Unit filename="SDL_Image.h" />
+		<Unit filename="SDL_Layout.cpp" />
 		<Unit filename="SDL_Layout.h" />
 		<Unit filename="SDL_MessageBox.cpp" />
 		<Unit filename="SDL_MessageBox.h" />
 		<Unit filename="SDL_Setting.h" />
 		<Unit filename="SDL_SimpleControls.cbp" />
+		<Unit filename="SDL_SimpleControls.depend" />
 		<Unit filename="SDL_SimpleControls.h" />
+		<Unit filename="SDL_SimpleControls.layout" />
 		<Unit filename="SDL_Text.cpp" />
 		<Unit filename="SDL_Text.h" />
 		<Unit filename="SDL_Widget.cpp" />
