添加测试项目，基于Google Test 添加SDL_Static类 添加SDL_LayoutObject 添加设置LayoutObject的接口

--- a/SDL_SimpleControls.cbp
+++ b/SDL_SimpleControls.cbp
@@ -69,6 +69,8 @@
 		<Unit filename="SDL_SimpleControls.depend" />
 		<Unit filename="SDL_SimpleControls.h" />
 		<Unit filename="SDL_SimpleControls.layout" />
+		<Unit filename="SDL_Static.cpp" />
+		<Unit filename="SDL_Static.h" />
 		<Unit filename="SDL_Text.cpp" />
 		<Unit filename="SDL_Text.h" />
 		<Unit filename="SDL_Widget.cpp" />
