添加Font类处理字体

--- a/SSC/contrib/win32/SSC.vcproj
+++ b/SSC/contrib/win32/SSC.vcproj
@@ -210,6 +210,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\source\SSC\SDL_Font.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\source\SSC\SDL_Glyph.h"
 				>
 			</File>
