修改鼠标事件处理机制 实现工具条按钮Hot和Down的效果，不过在鼠标按下后在多个按钮间移动还有问题

--- a/SSC/contrib/win32/SSC.vcproj
+++ b/SSC/contrib/win32/SSC.vcproj
@@ -186,6 +186,10 @@
 					RelativePath="..\..\source\SSC\SDL_ToolButton.cpp"
 					>
 				</File>
+				<File
+					RelativePath="..\..\source\SSC\SDL_Widget.cpp"
+					>
+				</File>
 			</Filter>
 			<Filter
 				Name="Simple"
