添加SDL_ProgressBall 添加Layout的默认尺寸接口

--- a/SSC/contrib/win32/SSC.vcproj
+++ b/SSC/contrib/win32/SSC.vcproj
@@ -179,6 +179,10 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\source\SSC\SDL_ProgressBall.cpp"
+					>
+				</File>
+				<File
 					RelativePath="..\..\source\SSC\SDL_ProgressBar.cpp"
 					>
 				</File>
@@ -294,6 +298,10 @@
 				</File>
 				<File
 					RelativePath="..\..\source\SSC\SDL_ListBoxItem.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\source\SSC\SDL_ProgressBall.h"
 					>
 				</File>
 				<File
