--- a/trunk/SSC/contrib/win32/SSC.vcproj
+++ b/trunk/SSC/contrib/win32/SSC.vcproj
@@ -210,6 +210,10 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
+				RelativePath="..\..\source\SSC\Iterator.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\source\SSC\SDL_Container.h"
 				>
 			</File>
