Screen改名为MainFrame，并增加SetCaption或FullScreen的接口

--- a/SSC/contrib/win32/SSC.vcproj
+++ b/SSC/contrib/win32/SSC.vcproj
@@ -305,15 +305,15 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\source\SSC\SDL_MainFrame.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\source\SSC\SDL_ProgressBall.h"
 					>
 				</File>
 				<File
 					RelativePath="..\..\source\SSC\SDL_ProgressBar.h"
-					>
-				</File>
-				<File
-					RelativePath="..\..\source\SSC\SDL_Screen.h"
 					>
 				</File>
 				<File
