添加CheckBox控件，不过事件控制不正常

--- a/SSC/contrib/win32/SSC.vcproj
+++ b/SSC/contrib/win32/SSC.vcproj
@@ -187,6 +187,10 @@
 				Name="Simple"
 				>
 				<File
+					RelativePath="..\..\source\SSC\SDL_CheckBox.cpp"
+					>
+				</File>
+				<File
 					RelativePath="..\..\source\SSC\SDL_Image.cpp"
 					>
 				</File>
@@ -284,6 +288,10 @@
 			<Filter
 				Name="Simple"
 				>
+				<File
+					RelativePath="..\..\source\SSC\SDL_CheckBox.h"
+					>
+				</File>
 				<File
 					RelativePath="..\..\source\SSC\SDL_Image.h"
 					>
