创建Label 修改Image 利用Label, Image, BorderLayout重新构架ListBoxItem

--- a/SSC/contrib/win32/SSC.vcproj
+++ b/SSC/contrib/win32/SSC.vcproj
@@ -195,6 +195,10 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\source\SSC\SDL_Label.cpp"
+					>
+				</File>
+				<File
 					RelativePath="..\..\source\SSC\SDL_ListBoxItem.cpp"
 					>
 				</File>
@@ -298,6 +302,10 @@
 				</File>
 				<File
 					RelativePath="..\..\source\SSC\SDL_ImageList.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\source\SSC\SDL_Label.h"
 					>
 				</File>
 				<File
