--- a/SSC/contrib/win32/SSC.vcproj
+++ b/SSC/contrib/win32/SSC.vcproj
@@ -156,7 +156,7 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath="..\..\source\SSC\Iterator.cpp"
+				RelativePath="..\..\source\SSC\SDL_Iterator.cpp"
 				>
 			</File>
 			<File
@@ -226,11 +226,11 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
-				RelativePath="..\..\source\SSC\Iterator.h"
+				RelativePath="..\..\source\SSC\SDL_Font.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\source\SSC\SDL_Font.h"
+				RelativePath="..\..\source\SSC\SDL_Iterator.h"
 				>
 			</File>
 			<File
