将Widget分为Glyph，Container,Widget3个类

--- a/SSC/contrib/win32/SSC.vcproj
+++ b/SSC/contrib/win32/SSC.vcproj
@@ -226,7 +226,15 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
+				RelativePath="..\..\source\SSC\SDL_Container.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\source\SSC\SDL_Font.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\source\SSC\SDL_Glyph.h"
 				>
 			</File>
 			<File
