--- a/trunk/SSC/contrib/win32/SSC.vcproj
+++ b/trunk/SSC/contrib/win32/SSC.vcproj
@@ -174,6 +174,14 @@
 					RelativePath="..\..\source\SSC\SDL_BoxLayout.cpp"
 					>
 				</File>
+				<File
+					RelativePath="..\..\source\SSC\SDL_Layout.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\source\SSC\SDL_OverBorderLayout.cpp"
+					>
+				</File>
 			</Filter>
 			<Filter
 				Name="Widget"
@@ -298,6 +306,10 @@
 				</File>
 				<File
 					RelativePath="..\..\source\SSC\SDL_Layout.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\source\SSC\SDL_OverBorderLayout.h"
 					>
 				</File>
 				<File
