--- a/trunk/SSC/contrib/win32/testSSC.vcproj
+++ b/trunk/SSC/contrib/win32/testSSC.vcproj
@@ -176,15 +176,15 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath="..\..\source\testSSC\FileView.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\source\testSSC\ImageView.cpp"
-				>
-			</File>
-			<File
 				RelativePath="..\..\source\testSSC\main.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\source\testSSC\View1.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\source\testSSC\View2.cpp"
 				>
 			</File>
 		</Filter>
@@ -194,11 +194,11 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
-				RelativePath="..\..\source\testSSC\FileView.h"
+				RelativePath="..\..\source\testSSC\View1.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\source\testSSC\ImageView.h"
+				RelativePath="..\..\source\testSSC\View2.h"
 				>
 			</File>
 		</Filter>
