--- a/trunk/SSC/contrib/win32/SSC.vcproj
+++ b/trunk/SSC/contrib/win32/SSC.vcproj
@@ -368,6 +368,10 @@
 					RelativePath="..\..\source\SSC\SDL_ProgressBar.h"
 					>
 				</File>
+				<File
+					RelativePath="..\..\source\SSC\SDL_Spacer.h"
+					>
+				</File>
 			</Filter>
 			<Filter
 				Name="Widget"
